Sprig security + classes de usuario

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-71</artifactId>
+            <version>3.14.1</version>
+        </dependency>
 	</dependencies>
 
 	<build>
