--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,5 +18,5 @@ spring:
       client:
         registration:
           google:
-            client-id: #id que se pega no google cloud
-            client-secret: #id que se pega no google cloud
+            client-id: ${GOOGLE_CLIENT_ID} #id que se pega no google cloud
+            client-secret: ${GOOGLE_CLIENT_SECRET} #id que se pega no google cloud
