--- a/src/main/resources/application-production.yaml
+++ b/src/main/resources/application-production.yaml
@@ -1,8 +1,6 @@
 spring:
   application:
     name: libraryapi
-  profiles:
-    active: production
   output:
     ansi:
       enabled: ALWAYS
@@ -12,7 +10,7 @@ spring:
     password: postgres
     driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
 #      ddl-auto: update
       ddl-auto: none
@@ -50,6 +48,3 @@ management:
 
 springdoc:
   override-with-generic-response: false
-
----
-
